VYRKCATG-101: Fixed spacing issues.

--- a/source/themes/custom/gearwrench/styles/libraries/view/related-products.scss
+++ b/source/themes/custom/gearwrench/styles/libraries/view/related-products.scss
@@ -14,6 +14,7 @@
  * Component
  */
 .view-related-products {
+  margin-bottom: 40px;
 
   .view-content {
     width: 100%;
